# synapse-ai

./: CMakeLists.txt  CMakePresets.json  README.md  compile_commands.json
dashboard/: CMakeLists.txt
dashboard/qml/: Card.qml  CoachLine.qml  CodeLab.qml  DataManager.qml  Disclosure.qml  InfoTip.qml  InputWidget.qml  LossChart.qml  Main.qml  NetworkView.qml  PixelGrid.qml  PrimaryButton.qml  SecondaryButton.qml  SegmentDisplay.qml  StatsPanel.qml  Theme.qml  WorkflowPanel.qml
dashboard/src/: AutoTrainer.cpp  AutoTrainer.h  EngineBridge.cpp  EngineBridge.h  ModelSession.cpp  ModelSession.h  main.cpp
engine/: CMakeLists.txt
engine/include/synapse/: activation.hpp  device_info.hpp  metrics.hpp  model_spec.hpp  network.hpp  optimizer.hpp  telemetry.hpp
engine/src/: activation_registry.cpp  activation_registry.hpp  custom_activations.cpp  custom_optimizers.cpp  device_info.cpp  engine_context.hpp  json.cpp  json.hpp  model_spec.cpp  network.cpp  optimizer_registry.cpp  optimizer_registry.hpp  telemetry.cpp  tensor.hpp
examples/: CMakeLists.txt  matrix_gpu.cpp
host/: CMakeLists.txt  main.cpp  protocol.cpp  protocol.hpp
models/blueprints/: ocr_5x5.json  ocr_digits_big.json  seven_segment.json  shapes_3x3.json  xor.json
models/defaults/: blank.json  full_adder.json  ocr_5x5.json  seven_segment.json  shapes_3x3.json
res/: README.md
src/: matrix_gpu  sycl_test  sycl_test.cpp
tests/: CMakeLists.txt  auto_trainer_smoke.cpp  custom_activation_smoke.cpp  forward_smoke.cpp  host_ipc_commands.txt  host_ipc_test.cmake  optimizer_smoke.cpp  train_smoke.cpp
